<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/main_navi_item_home"
        android:icon="@drawable/select_draw_gnb_main"
        android:title="@string/main" />

    <item
        android:id="@+id/main_navi_item_schedule"
        android:icon="@drawable/select_draw_gnb_schedule"
        android:title="@string/schedule" />

    <item
        android:id="@+id/main_navi_item_chat"
        android:icon="@drawable/select_draw_gnb_chat"
        android:title="@string/chatting" />

    <item
        android:id="@+id/main_navi_item_search"
        android:icon="@drawable/select_draw_gnb_search"
        android:title="@string/search" />

    <item
        android:id="@+id/main_navi_item_mypage"
        android:icon="@drawable/select_draw_gnb_my"
        android:title="@string/my" />

</menu>