<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.ddd.airplane.presenter.signup.viewmodel.SignUpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/brand_black">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23.5dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.ddd.airplane.common.views.component.EditTextView
                        android:id="@+id/et_nick_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:visibility="gone"
                        app:focus="true"
                        app:label="@string/nick_name"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:optionText="@string/sign_up_nick_name_change" />

                    <com.ddd.airplane.common.views.component.EditTextView
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:inputType="textEmailAddress"
                        app:description="@string/sign_up_email_valid"
                        app:label="@string/email"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_nick_name"
                        app:valid="email" />

                    <com.ddd.airplane.common.views.component.EditTextView
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:inputType="textPassword"
                        app:description="@string/sign_up_password_valid"
                        app:label="@string/password"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_email"
                        app:optionText="@string/sign_up_show"
                        app:valid="password" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.ddd.airplane.common.views.component.ButtonView
                    android:id="@+id/bt_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:layout_constraintTop_toBottomOf="@id/cl_input"
                    bind:text="@{@string/sign_up}" />

                <View
                    android:id="@+id/v_divider"
                    style="@style/divider_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15.5dp"
                    app:layout_constraintTop_toBottomOf="@id/bt_sign_up" />

                <!-- 이미 가입 -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_already"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.5dp"
                    android:background="?attr/selectableItemBackground"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_divider">

                    <TextView
                        android:id="@+id/tv_info"
                        style="@style/font_r"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_info"
                        android:textColor="@color/brand_white"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_sign_up"
                        style="@style/font_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/brand_blue"
                        app:layout_constraintLeft_toRightOf="@id/tv_info"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <!-- header -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_header"
            android:background="#000000"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_collapseMode="pin"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@null"
            app:title="">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_finish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_back"
                        tools:visibility="visible" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lav_logo"
                    android:layout_width="47dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="motion.json"
                    app:lottie_loop="true" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>