<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presenter.signin.view.SignInActivity">

    <data>

        <variable
            name="vm"
            type="com.ddd.airplane.presenter.signin.viewmodel.SignInViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/brand_black">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.ddd.airplane.common.views.component.EditTextView
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:inputType="textEmailAddress"
                        app:description="@string/sign_up_email_valid"
                        app:label="@string/email"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:valid="email" />

                    <com.ddd.airplane.common.views.component.EditTextView
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:inputType="textPassword"
                        app:description="@string/sign_up_password_valid"
                        app:label="@string/password"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_email"
                        app:optionText="@string/sign_up_show"
                        app:valid="password" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.ddd.airplane.common.views.component.ButtonView
                    android:id="@+id/bt_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    app:layout_constraintTop_toBottomOf="@id/cl_input"
                    bind:text="@{@string/sign_in}" />

                <!-- 구분선 -->
                <View
                    android:id="@+id/v_divider_sign_up"
                    style="@style/divider_vertical"
                    android:layout_marginTop="15.5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bt_sign_in" />

                <!-- 회원 가입 안내 -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_sign_up_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.5dp"
                    android:background="?attr/selectableItemBackground"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_divider_sign_up">

                    <TextView
                        android:id="@+id/tv_info"
                        style="@style/font_r"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_info"
                        android:textColor="@color/brand_white"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_sign_up"
                        style="@style/font_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/brand_blue"
                        app:layout_constraintLeft_toRightOf="@id/tv_info"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <!-- header -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_header"
            android:background="#000000"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_collapseMode="pin"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@null"
            app:title="">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lav_logo"
                    android:layout_width="47dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="motion.json"
                    app:lottie_loop="true" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
