<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ddd.airplane.presenter.mypage.viewmodel.MyPageViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/brand_black">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:visibility="@{viewModel.subscribeList.size() > 0 ? View.VISIBLE : View.GONE}"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <include
                    android:id="@+id/ic_title"
                    layout="@layout/content_title_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    bind:title="@{@string/mypage_subscribe_list}" />

                <!-- 구독 리스트 -->
                <com.ddd.airplane.common.views.component.BoundRecyclerView
                    android:id="@+id/rv_subscribe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/ic_title"
                    app:spanCount="2"
                    bind:isClear="@{viewModel.isClear()}"
                    bind:items="@{viewModel.subscribeList}"
                    tools:itemCount="10"
                    tools:listitem="@layout/thumbnail_grid_item" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- 헤더 -->
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/ctl_parallax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:expandedTitleMarginEnd="56dp"
                    app:expandedTitleMarginStart="40dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="56dp"
                        android:orientation="vertical"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_hello"
                                style="@style/font_r"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mypage_hello"
                                android:textColor="@color/brand_white"
                                android:textSize="14dp"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_name"
                                style="@style/font_b"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewModel.nickName}"
                                android:textColor="@color/brand_blue"
                                android:textSize="14dp"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/tv_hello"
                                tools:text="비행기팀" />

                            <androidx.appcompat.widget.AppCompatTextView
                                style="@style/font_r"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mypage_sir"
                                android:textColor="@color/brand_white"
                                android:textSize="14dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintLeft_toRightOf="@id/tv_name" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <View
                            android:id="@+id/v_divider_profile"
                            style="@style/divider_vertical"
                            android:layout_marginTop="24dp"
                            android:visibility="@{viewModel.subscribeList.size() > 0 ? View.VISIBLE : View.GONE}" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <com.ddd.airplane.common.views.component.HeaderView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:title="@string/mypage" />
                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </FrameLayout>
</layout>